--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+        @apply py-2 px-5 bg-amber-500 text-white font-semibold rounded shadow-md hover:bg-amber-700 focus:outline-none focus:ring focus:ring-amber-400 focus:ring-opacity-75;
+    }
+
+    input {
+        @apply py-2 px-3 border border-gray-300 rounded focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-75 w-full;
+    }
+}
