--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,6 +7,10 @@
         @apply py-2 px-5 bg-amber-500 text-white font-semibold rounded shadow-md hover:bg-amber-700 focus:outline-none focus:ring focus:ring-amber-400 focus:ring-opacity-75;
     }
 
+    .container {
+        @apply mx-3 lg:mx-auto w-auto lg:max-w-[700px] my-8 clear-both;
+    }
+
     input {
         @apply py-2 px-3 border border-gray-300 rounded focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-75 w-full;
     }
