--- a/templates/teacher/dashboard.html.twig
+++ b/templates/teacher/dashboard.html.twig
@@ -1,10 +1,43 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Mes rendez-vous{% endblock %}
+
 {% block body %}
     {% if app.user %}
-        <a href="{{ path('app_logout') }}" class="underline pe-3 float-end">Déconnexion</a>
+        <a href="{{ path('app_logout') }}" class="underline p-3 float-end">Déconnexion</a>
     {% endif %}
 
+    <div class="container">
+        <div class="text-center">
+            <img src="{{ asset(app.user.avatar) }}" alt="" class="rounded-full max-w-28 inline-block shadow-md">
 
-    teacher_dashboard
+            <h1 class="font-bold text-3xl">
+                Bonjour {{ app.user.firstName }} {{ app.user.lastName }} !
+            </h1>
+        </div>
+
+
+        <div class="border rounded p-6 bg-white my-4">
+
+            <h2 class="text-2xl">
+                Mes créneaux
+            </h2>
+
+            <div>
+                {% for appointment in appointments %}
+                    <div class="rounded {{ appointment.is_available ? 'border border-amber-400 text-amber-400' :  'bg-amber-400 text-white' }} my-3 py-5 px-4">
+                        <p class="font-bold mb-3">
+                            {{ appointment.datetime|date('H:i') }} le {{ appointment.datetime|date('d/m/Y') }}
+                        </p>
+                        <p class="font-semibold">
+                            {{ appointment.is_available ? 'Disponible' :  appointment.student }}
+                        </p>
+                    </div>
+                {% endfor %}
+            </div>
+
+        </div>
+    </div>
+
+    
 {% endblock %}
