--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,48 +2,62 @@
 
 {% block body %}
     {% if app.user %}
-            <a href="{{ path('app_logout') }}" class="underline p-3 float-end">Déconnexion</a>
+        <a href="{{ path('app_logout') }}" class="underline p-3 float-end">Déconnexion</a>
     {% endif %}
 
     <div class="container">
 
-        <div class="border rounded bg-white mb-5">
-            <img src="{{ asset('images/illustation.jpeg') }}" alt="" class="rounded-t max-h-[200px] w-[100%] object-cover">
 
-            <h1 class="text-3xl font-bold  p-7">
-                École Les Fontanilles
-            </h1>
-
-            <h2 class="text-gray-700  p-7 pt-3">
-                Bienvenue sur le site de l'école Les Fontanilles
-            </h2>
-        </div>
-
-        <div class="border rounded p-5 bg-white">
-            Bienvenue sur notre plateforme de prise de rendez-vous en ligne pour les parents et les enseignants.
-            <br>
-            <br>
-            Sélectionnez la date et l'heure qui vous conviennent le mieux pour discuter des progrès de votre enfant,
-            poser des questions ou aborder toute autre préoccupation.
-            <br>
-            Nous nous engageons à collaborer étroitement avec
-            vous pour assurer la réussite de votre enfant.
-            <br><br>
-            Nous avons hâte de vous rencontrer !
-
+        <div class="card bg-base-100 shadow-xl my-4">
+            <figure>
+                <img src="{{ asset('images/illustation.jpeg') }}"
+                     alt="Teacher" class="max-h-[200px] object-cover w-full"/>
+            </figure>
+            <div class="card-body items-center text-center">
+                <h2 class="card-title">
+                    École Les Fontanilles
+                </h2>
+                <h3 class="text-gray-700">
+                    Bienvenue sur le site de l'école Les Fontanilles
+                </h3>
+            </div>
         </div>
 
 
+        <div class="card bg-base-100 shadow-xl my-4">
+
+            <div class="card-body">
+                Bienvenue sur notre plateforme de prise de rendez-vous en ligne pour les parents et les enseignants.
+                <br>
+                <br>
+                Sélectionnez la date et l'heure qui vous conviennent le mieux pour discuter des progrès de votre enfant,
+                poser des questions ou aborder toute autre préoccupation.
+                <br>
+                Nous nous engageons à collaborer étroitement avec
+                vous pour assurer la réussite de votre enfant.
+                <br><br>
+                Nous avons hâte de vous rencontrer !
+            </div>
+        </div>
 
 
         <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 auto-rows-fr my-7">
             {% for teacher in teachers %}
-                <a href="" class="border rounded grayscale hover:grayscale-0 ">
-                    <img src="{{ asset(teacher.avatar) }}" alt="" class="rounded-t">
-                    <div class="p-3">
-                        {{ teacher.firstName }} {{ teacher.lastName }}
-                        <div class="text-gray-600 text-sm">
-                            {{ teacher.grade }}
+                <a href="" class="grayscale hover:grayscale-0 ">
+                    <div class="card card-compact bg-base-100 shadow-xl my-4 grayscale hover:grayscale-0 ">
+                        <figure>
+                            <img src="{{ asset(teacher.avatar) }}"
+                                 alt="Teacher" class="max-h-[200px] object-cover w-full"/>
+                        </figure>
+
+                        <div class="card-body">
+
+                            <div>
+                                {{ teacher.firstName }} {{ teacher.lastName }}
+                                <div class="text-gray-600 text-sm">
+                                    {{ teacher.grade }}
+                                </div>
+                            </div>
                         </div>
                     </div>
 
