--- a/templates/teacher/dashboard.html.twig
+++ b/templates/teacher/dashboard.html.twig
@@ -30,13 +30,13 @@
             {% for appointment in appointments %}
 
 
-                <div class="card bg-base-100 border {{ appointment.is_available ? '' :  'border-primary' }}  card-compact shadow-lg my-3">
+                <div class="card bg-base-100 border {{ appointment.isAvailable ? '' :  'border-primary' }}  card-compact shadow-lg my-3">
                     <div class="card-body">
                         <h2 class="card-title">
-                            {{ appointment.datetime|date('H:i') }} le {{ appointment.datetime|date('d/m/Y') }}
+                            {{ appointment.beginAt |date('H:i') }} le {{ appointment.beginAt|date('d/m/Y') }}
                         </h2>
 
-                        {% if appointment.is_available %}
+                        {% if appointment.isAvailable %}
                             <p>
                                 Créneau disponible
                             </p>
@@ -51,7 +51,7 @@
 
 
                         <div class="card-actions justify-end">
-                            {% if appointment.is_available %}
+                            {% if appointment.isAvailable %}
                                 <button class="btn btn-outline btn-sm btn-primary">Supprimer le créneau</button>
                             {% else %}
                                 <button class="btn btn-sm btn-primary">Annuler le rdv</button>
