--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body class="bg-gray-100">
+    <body class="bg-gray-100 min-h-dvh ">
         {% block body %}{% endblock %}
     </body>
 </html>
