--- a/templates/teacher/_base.html.twig
+++ b/templates/teacher/_base.html.twig
@@ -5,14 +5,14 @@
         <a href="{{ path('app_logout') }}" class="underline p-3 float-end">Déconnexion</a>
     {% endif %}
 
-    <div class="container">
+    <div class="container prose">
         <div class="text-center mb-8">
 
-            <div class="avatar">
+            <a href="{{ path('teacher_dashboard') }}" class="avatar">
                 <div class="mask mask-hexagon w-36">
-                    <img src="{{ asset(app.user.avatar) }}"/>
+                    <img src="{{ asset(app.user.avatar) }}" class="not-prose"/>
                 </div>
-            </div>
+            </a>
 
             <h1 class="font-bold text-3xl">
                 Bonjour {{ app.user.firstName }} {{ app.user.lastName }} !
@@ -22,7 +22,7 @@
 
         <h2 class="text-2xl">
             <a href="{{ path('teacher_dashboard') }}">
-                🠔
+                <-
             </a>
 
             {% block page_title %}
