--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,7 +21,7 @@
 
         <form method="post">
 
-            <div class="card bg-base-100 w-96 shadow-xl">
+            <div class="card bg-base-100 w-96 shadow-lg">
                 <figure>
                     <img
                             src="{{ asset('images/illustation.jpeg') }}"
