--- a/templates/teacher/dashboard.html.twig
+++ b/templates/teacher/dashboard.html.twig
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="grid grid-cols-2 gap-4 mt-8">
 
-        <a href="{{ path('teacher_appointments') }}" class="card bg-base-100 shadow-xl">
+        <a href="{{ path('teacher_appointments') }}" class="card bg-base-100 shadow-lg">
             <div class="card-body">
                 <h2 class="card-title">
                     Mes rendez-vous
@@ -16,16 +16,16 @@
             </div>
         </a>
 
-        <a href="" class="card bg-base-100 shadow-xl">
+        <a href="" class="card bg-base-100 shadow-lg">
             <div class="card-body">
                 <h2 class="card-title">
-                    Mes crénaux
+                    Mes créneaux
                 </h2>
 
             </div>
         </a>
 
-        <a href="{{ path('teacher_students') }}" class="card bg-base-100 shadow-xl">
+        <a href="{{ path('teacher_students') }}" class="card bg-base-100 shadow-lg">
             <div class="card-body">
                 <h2 class="card-title">
                     Mes élèves
@@ -33,7 +33,7 @@
 
             </div>
         </a>
-        <a href="{{ path('teacher_account') }}" class="card bg-base-100 shadow-xl">
+        <a href="{{ path('teacher_account') }}" class="card bg-base-100 shadow-lg">
             <div class="card-body">
                 <h2 class="card-title">
                     Mon compte
