--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,6 +10,22 @@
 
 @layer components {
     .container {
-        @apply mx-3 lg:mx-auto w-auto lg:max-w-[700px] py-8 clear-both;
+        @apply mx-auto w-auto lg:max-w-[900px] py-8 clear-both;
     }
+
+    .btn {
+        @apply no-underline;
+    }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0px 1000px #fbf7f4 inset !important;
 }
