--- a/templates/teacher/dashboard.html.twig
+++ b/templates/teacher/dashboard.html.twig
@@ -5,37 +5,37 @@
 {% endblock %}
 
 {% block content %}
-    <div class="grid grid-cols-2 gap-4 mt-8">
+    <div class="grid grid-cols-2 gap-6 mt-8 ">
 
-        <a href="{{ path('teacher_appointments') }}" class="card bg-base-100 shadow-lg">
-            <div class="card-body">
-                <h2 class="card-title">
+        <a href="{{ path('teacher_appointments') }}" class="card bg-base-100 shadow-lg no-underline transition duration-500 hover:scale-110 hover:bg-secondary/50">
+            <div class="card-body items-center justify-center">
+                <h2 class="card-title my-6">
                     Mes rendez-vous
                 </h2>
 
             </div>
         </a>
 
-        <a href="" class="card bg-base-100 shadow-lg">
-            <div class="card-body">
-                <h2 class="card-title">
+        <a href="" class="card bg-base-100 shadow-lg no-underline transition duration-500 hover:scale-110 hover:bg-secondary/50">
+            <div class="card-body items-center justify-center">
+                <h2 class="card-title my-6">
                     Mes créneaux
                 </h2>
 
             </div>
         </a>
 
-        <a href="{{ path('teacher_students') }}" class="card bg-base-100 shadow-lg">
-            <div class="card-body">
-                <h2 class="card-title">
+        <a href="{{ path('teacher_students') }}" class="card bg-base-100 shadow-lg no-underline transition duration-500 hover:scale-110 hover:bg-secondary/50">
+            <div class="card-body items-center justify-center">
+                <h2 class="card-title my-6">
                     Mes élèves
                 </h2>
 
             </div>
         </a>
-        <a href="{{ path('teacher_account') }}" class="card bg-base-100 shadow-lg">
-            <div class="card-body">
-                <h2 class="card-title">
+        <a href="{{ path('teacher_account') }}" class="card bg-base-100 shadow-lg no-underline transition duration-500 hover:scale-110 hover:bg-secondary/50">
+            <div class="card-body items-center justify-center">
+                <h2 class="card-title my-6">
                     Mon compte
                 </h2>
 
