--- a/templates/public/_base.html.twig
+++ b/templates/public/_base.html.twig
@@ -12,18 +12,19 @@
             <a href="{{ path('home') }}" class="not-prose">
                 <figure>
                     <img src="{{ asset('images/illustation.jpeg') }}"
-                         alt="Illustration" class="max-h-[200px] object-cover w-full"/>
+                         alt="Illustration" class="max-h-[200px] object-cover w-full rounded-t-2xl"/>
                 </figure>
             </a>
             <div class="card-body items-center text-center">
-                <h2 class="card-title mt-0">
+                <h1 class="card-title mt-0 mb-6">
                     École Les Fontanilles
-                </h2>
-                <h3 class="text-gray-700 mb-0">
+                </h1>
+                <h2 class="text-gray-700 my-0">
                     Bienvenue sur le site de l'école Les Fontanilles
-                </h3>
+                </h2>
             </div>
         </div>
+
 
 
         {% block content %}
