--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -20,10 +20,10 @@
     <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 auto-rows-fr my-7">
         {% for teacher in teachers %}
             <div class="min-h-full">
-                <div class="card card-compact bg-base-100 shadow-lg my-4 ">
+                <div class="card bg-base-100 shadow-lg my-4 ">
 
                     <div class="card-body text-primary">
-                        <h2 class="card-title ">{{ teacher.firstName }} {{ teacher.lastName }}</h2>
+                        <h2 class="card-title my-0">{{ teacher.firstName }} {{ teacher.lastName }}</h2>
 
                         <div class="text-gray-600 text-sm">
                             {{ teacher.grade }}
