--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,33 +12,51 @@
                 </div>
             {% endif %}
 
-            {% if app.user %}
-                <div class="block border">
-                    Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
-                </div>
-            {% endif %}
         </div>
 
         <form method="post">
 
-            <div class="card bg-base-100 w-96 shadow-lg">
+            <div class="card bg-base-100 min-w-96 w-2/3 max-w-[900px] shadow-lg mx-auto">
                 <figure>
                     <img
                             src="{{ asset('images/illustation.jpeg') }}"
-                            alt="Teacher"/>
+                            alt="Illustration"/>
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title">Connexion</h2>
 
-                    <div class="mt-3">
-                        <label for="username" class="block font-semibold mb-2 text-start">Email</label>
+
+                    {% if app.user %}
+                        <div role="alert" class="alert">
+                            <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    class="stroke-info h-6 w-6 shrink-0">
+                                <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                            </svg>
+                            <div>
+                                Vous êtes connecté en tant que {{ app.user.firstName }} {{ app.user.lastName }}. <br>
+                                <a href="{{ path('teacher_dashboard') }}" class="underline">Rejoindre mon espace</a>
+                            </div>
+                        </div>
+
+                    {% endif %}
+
+
+                    <div class="mt-4 w-full">
+                        <label for="username" class="block font-semibold mb-1 text-start">Email</label>
                         <input type="email" value="{{ last_username }}" name="_username" id="username"
                                class="input input-bordered w-full max-w"
                                autocomplete="email" required autofocus>
                     </div>
 
-                    <div class="mt-3">
-                        <label for="password" class="block font-semibold mb-2 text-start">Password</label>
+                    <div class="mt-4 w-full">
+                        <label for="password" class="block font-semibold mb-1 text-start">Password</label>
                         <input type="password" name="_password" id="password" class="input input-bordered w-full max-w"
                                autocomplete="current-password" required>
                     </div>
@@ -47,7 +65,7 @@
                            value="{{ csrf_token('authenticate') }}"
                     >
 
-                    <button class="btn btn-primary mx-auto " type="submit">
+                    <button class="btn btn-primary mx-auto mt-4" type="submit">
                         Connexion
                     </button>
                 </div>
