--- a/templates/teacher/appointments.html.twig
+++ b/templates/teacher/appointments.html.twig
@@ -2,6 +2,11 @@
 
 {% block page_title %}
     Mes Rendez-vous
+
+    <a href="{{ path('teacher_appointments_create') }}" class="btn btn-secondary float-end">
+        Ajouter des créneaux
+    </a>
+
 {% endblock %}
 
 
