:sparkles: invitation enseignant

--- a/templates/teacher/dashboard.html.twig
+++ b/templates/teacher/dashboard.html.twig
@@ -24,6 +24,18 @@
 
             </div>
         </a>
+
+        {% if is_granted('ROLE_ADMIN') %}
+         <a href="{{ path('manage_teacher') }}" class="card bg-base-100 shadow-lg no-underline transition duration-500 hover:scale-110 hover:bg-secondary/50">
+            <div class="card-body items-center justify-center">
+                <h2 class="card-title my-6">
+                    Mes enseignants
+                </h2>
+
+            </div>
+        </a>
+        {% endif %}
+
         <a href="{{ path('teacher_account') }}" class="card bg-base-100 shadow-lg no-underline transition duration-500 hover:scale-110 hover:bg-secondary/50">
             <div class="card-body items-center justify-center">
                 <h2 class="card-title my-6">
