--- a/templates/bundles/form_theme.html.twig
+++ b/templates/bundles/form_theme.html.twig
@@ -56,3 +56,21 @@
         </ul>
     {%- endif -%}
 {%- endblock form_errors -%}
+
+
+{%- block datetime_widget -%}
+    {% if widget == 'single_text' %}
+        {{- block('form_widget_simple') -}}
+    {%- else -%}
+        <div {{ block('widget_container_attributes') }}>
+            {{- form_errors(form.date) -}}
+            {{- form_errors(form.time) -}}
+
+            <div class="flex gap-4">
+                {{- form_widget(form.time) -}}
+                {{- form_widget(form.date) -}}
+            </div>
+        </div>
+    {%- endif -%}
+{%- endblock datetime_widget -%}
+
