--- a/templates/teacher/_base.html.twig
+++ b/templates/teacher/_base.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% set route = app.current_route %}
 
 {% block body %}
     {% if app.user %}
@@ -46,9 +47,11 @@
         {% endfor %}
 
         <h2 class="text-2xl">
-            <a href="{{ path('teacher_dashboard') }}" class="btn btn-primary btn-sm">
-                <i class="lni lni-arrow-left"></i>
-            </a>
+            {% if route is not same as 'teacher_dashboard' %}
+                <a href="{{ path('teacher_dashboard') }}" class="btn btn-primary btn-sm">
+                    <i class="lni lni-arrow-left"></i>
+                </a>
+            {% endif %}
 
             {% block page_title %}
             {% endblock %}
